# RayTracing

./: .gitignore  CMakeLists.txt  README.md
resources/assets/scenes/: default_scene.json
resources/assets/shaders/: frag.glsl  raytracing_comp.glsl  vert.glsl
src/: main.cpp
src/app/: RaytracingApplication.cpp  RaytracingApplication.h
src/app/bvh/: BVHTriangle.h  BoundingBox.hpp  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h
src/app/controller/: CameraController.cpp  CameraController.h
src/app/interface/: Interface.cpp  Interface.h
src/app/interface/panels/: HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  SettingsPanel.cpp  SettingsPanel.h  ToolbarPanel.cpp  ToolbarPanel.h  UIPanel.h  ViewportPanel.cpp  ViewportPanel.h
src/app/model/: ModelManager.cpp  ModelManager.h
src/app/rendering/: Camera.cpp  Camera.h  Canvas.h  RaytracingShader.cpp  RaytracingShader.h  Renderer.cpp  Renderer.h
src/app/scene/: Components.h  RaytracedObjects.h
src/engine/: AbstractGame.h  Application.h  GameLifecycle.h  GameLogic.h  IAppLifecycle.h  IGameLifecycle.h
src/engine/clock/: AbstractClock.h  FixedStepClock.cpp  FixedStepClock.h
src/engine/event/: EventDispatcher.h  IEvent.h
src/engine/graphics/: Framebuffer.cpp  Framebuffer.h
src/engine/graphics/mesh/: VertexArrayObject.cpp  VertexArrayObject.h
src/engine/graphics/rendering/: IRenderable.h  Renderable.h
src/engine/graphics/shader/: AbstractShader.cpp  AbstractShader.h  ComputeShader.cpp  ComputeShader.h  ShaderException.hpp  ShaderProgram.cpp  ShaderProgram.h  ShaderStorageBuffer.h  ShaderStorageBuffer.hpp  UniformAccess.h
src/engine/graphics/shader/exceptions/: ShaderException.h
src/engine/graphics/shader/uniforms/: IUniformAccess.h  UniformAccess.cpp  UniformAccess.h
src/engine/messenger/: Messenger.hpp
src/engine/profiler/: SteadyProfiler.cpp  SteadyProfiler.h
src/engine/scene/: Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  SerializableComponent.h
src/engine/utils/: FileReader.h
src/engine/window/: IImGuiLayer.h  IImGuiWindow.h  Window.cpp  Window.h  WindowResizeEvent.h
src/engine/window/event/: WindowResizeEvent.h
src/engine/window/imgui/: IImGuiWindow.h
src/engine/window/input/: InputsManager.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/game/: DefaultScene.h  Game.cpp  Game.h  RaytracingApplication.cpp  RaytracingApplication.h  TestShader.cpp  TestShader.h
src/game/controller/: CameraController.cpp  CameraController.h
src/game/gui/: Gui.cpp  Gui.h
src/game/interface/: Interface.cpp  Interface.h
src/game/interface/panels/: HierarchyPanel.cpp  HierarchyPanel.h  IPanel.h  InspectorPanel.cpp  InspectorPanel.h  SettingsPanel.cpp  SettingsPanel.h  UIPanel.h  ViewportPanel.cpp  ViewportPanel.h
src/game/model/: ModelManager.cpp
src/game/rendering/: Camera.cpp  Camera.h  CameraMovedEvent.h  Canvas.cpp  Canvas.h  RaytracingShader.cpp  RaytracingShader.h  Renderer.cpp  Renderer.h  SpheresShaderBuffer.cpp  SpheresShaderBuffer.h  TracingShader.cpp  TracingShader.h
src/game/rendering/camera/: Camera.cpp  Camera.h
src/game/rendering/shader/: TracingShader.cpp  TracingShader.h
src/game/scene/: Components.h
